<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">_多贝公开课_day02_欢迎界面notitle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_secend">SecendActivity</string>

    <string-array name="menu_str">
        <item>登陆</item>
        <item>主页</item>
        <item>小组</item>
        <item>公开课</item>
        <item>设置</item>
    </string-array>
	<string name="loading">loading..</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="cp">cp</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="password_comfirm">确认密码</string>
    <string name="autologin">自动登陆</string>
    <string name="login">登陆</string>
    <string name="regist">注册</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_post_detail">PostDetailActivity</string>
    <string name="title_activity_myhome">MyhomeActivity</string>

</resources>
